# Research

./: README.md  setup_runpod.sh
configs/rl/gym_hil/: env_config.json  train_config.json
docs/: PI0_LOCALITY_PROBE.md
faact_hardware/: README.md  pyproject.toml
faact_hardware/configs/: so101_transfer_cube.yaml
faact_hardware/docs/: HARDWARE_SAFETY.md  SO101_USB_PORTS.md
faact_hardware/faact_hardware/: __init__.py  config.py  runtime.py  so101_bridge.py
faact_hardware/scripts/: run_alarm_eval.py  run_hardware_faact.py  run_hardware_phases.sh  run_shadow_mode.py
failure_prediction/: interfaces.py  runtime_components.py
failure_prediction/data/: __init__.py  failure_dataset.py  splits.py
failure_prediction/docs/: failure_dataset_pipeline.md
failure_prediction/fiper/: __init__.py  ace.py  alarm.py  baseline.py  conformal.py
failure_prediction/scripts/: collect_failure_dataset.py  inspect_feature_fields.py  plot_failure_results.py  postprocess_failure_dataset.py  record_eval_videos.py  run_fiper_offline_eval.py  summarize_risk_runs.py  train_failure_predictor.py
failure_prediction/utils/: eval_metrics.py  failure_dataset_logger.py  feature_stats.py  prediction_artifacts.py
failure_prediction_runs/: pi0_commit_manifest.md  pi0_eval_combo_targeted_summary.json  pi0_intervention_lift_report.md
scripts/: eval_sim.sh
