[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "faact-hardware"
version = "0.1.0"
description = "Hardware-focused FAACT experiment scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "PyYAML",
]

[tool.setuptools.packages.find]
include = ["faact_hardware*"]
